# dose2

./: CMakeLists.txt  README.md  b1dose.cc  electron_nac_1p59d_4144-4.mac  electron_nac_1p59d_4204-BE6.mac  electron_nac_1p59d_4204-TA5.mac  electron_nac_1p59d_4204-TE6.mac  electron_nac_1p59d_4214-BA6.mac  electron_nac_1p59d_4214-TA6.mac  electron_wac_3p70d.mac  init_vis.mac  jht1.gdml  model.gdml  nac_1p59d_1000000e10000s.mac  nac_1p59d_1E7e1E5s_4144-4.mac  nac_1p59d_1E7e1E5s_4204-BE6.mac  nac_1p59d_1E7e1E5s_4204-TA5.mac  nac_1p59d_1E7e1E5s_4204-TE6.mac  nac_1p59d_1E7e1E5s_4214-BA6.mac  nac_1p59d_1E7e1E5s_4214-TA6.mac  primary2.mac  proton_wac_0p55d.mac  run.mac  vis.mac  wac_3p70d_1000000e10000s.mac  wac_3p70d_1E6e1E4s.mac  wac_e2MeV_0p31m_3p70d_1000000e10000s.out
include/: B1ActionInitialization.hh  B1DetectorConstruction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  PhysicsList.hh  PhysicsListMessenger.hh
src/: B1DetectorConstruction.cc  B1EventAction.cc  B1EventAction.cc.old  B1PrimaryGeneratorAction.cc  B1RunAction.cc  PhysicsList.cc  PhysicsListMessenger.cc
